# causal-uplift-experimentation-ops

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  patchproof.yaml  pyproject.toml
.github/workflows/: ci.yml  patchproof.yml
artifacts/policy_bundle/: README.md  feature_columns.json  manifest.json  policy_config.json  value_assumptions.json
docs/: architecture.md  portfolio_review.md  release_checklist.md  reproducibility.md
reports/: api_staging_safety_controls.md  api_staging_service.md  crossfit_model_comparison.md  experiment_preregistration.md  policy_artifact_manifest.md  policy_card.md  policy_sensitivity_analysis.md  policy_value_uncertainty.md  prospective_policy_trial.md  staging_observability_report.md  synthetic_ab_summary.md  synthetic_t_learner_report.md  synthetic_uplift_evaluation.md  t_learner_bootstrap_uncertainty.md  t_learner_repeated_split_robustness.md  targeting_policy_simulation.md  trial_design_optimization.md
reports/portfolio/: interview_talking_points.md  project_summary.md  release_0.1.0.md  verification_0.1.0.md
scripts/: docker_smoke_test.sh  run_portfolio_smoke.sh
src/causal_uplift_experimentation_ops/: __init__.py  _version.py  cli.py
src/causal_uplift_experimentation_ops/api/: __init__.py  app.py  errors.py  report.py  safety.py  safety_report.py  schemas.py  service.py
src/causal_uplift_experimentation_ops/artifacts/: __init__.py  batch_score.py  manifest.py  model_bundle.py  policy_card.py  report.py
src/causal_uplift_experimentation_ops/data/: __init__.py  generation.py  validation.py
src/causal_uplift_experimentation_ops/evaluation/: __init__.py  bootstrap.py  bootstrap_report.py  comparison.py  comparison_report.py  crossfit.py  metrics.py  oracle.py  report.py  robustness.py  robustness_report.py  splitting.py
src/causal_uplift_experimentation_ops/experiments/: __init__.py  analysis.py  design_optimization.py  policy_trial.py  policy_trial_report.py  preregistration.py  preregistration_report.py  report.py
src/causal_uplift_experimentation_ops/models/: __init__.py  base.py  registry.py  report.py  rf_t_learner.py  s_learner.py  t_learner.py
src/causal_uplift_experimentation_ops/monitoring/: __init__.py  audit.py  drift.py  health.py  promotion.py  report.py
src/causal_uplift_experimentation_ops/policy/: __init__.py  comparison.py  report.py  sensitivity.py  sensitivity_report.py  simulation.py  uncertainty.py  uncertainty_report.py  value.py
tests/: test_api.py  test_api_safety.py  test_bootstrap.py  test_crossfit_comparison.py  test_data_generation.py  test_experiment_analysis.py  test_experiment_planning.py  test_monitoring.py  test_packaging.py  test_patchproof_api_policy.py  test_policy_artifact.py  test_policy_sensitivity.py  test_policy_simulation.py  test_policy_trial.py  test_policy_uncertainty.py  test_robustness.py  test_t_learner.py  test_uplift_evaluation.py
