[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-uplift-experimentation-ops"
version = "0.1.0"
description = "Causal ML experimentation platform for uplift modeling and treatment policy simulation."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "streamlit",
    "pydantic",
    "pytest",
    "ruff",
]

[project.scripts]
generate-synthetic-experiment = "causal_uplift_experimentation_ops.data.generation:main"
generate-ab-report = "causal_uplift_experimentation_ops.experiments.report:main"
generate-uplift-evaluation = "causal_uplift_experimentation_ops.evaluation.report:main"
generate-t-learner-report = "causal_uplift_experimentation_ops.models.report:main"
generate-t-learner-robustness = "causal_uplift_experimentation_ops.evaluation.robustness_report:main"
generate-t-learner-bootstrap = "causal_uplift_experimentation_ops.evaluation.bootstrap_report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
