[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-uplift-experimentation-ops"
version = "0.1.0"
description = "Causal ML experimentation platform for uplift modeling and treatment policy simulation."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "joblib",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "matplotlib",
    "fastapi",
    "httpx",
    "uvicorn",
    "streamlit",
    "pydantic",
    "pytest",
    "ruff",
]

[project.scripts]
generate-synthetic-experiment = "causal_uplift_experimentation_ops.data.generation:main"
generate-ab-report = "causal_uplift_experimentation_ops.experiments.report:main"
generate-uplift-evaluation = "causal_uplift_experimentation_ops.evaluation.report:main"
generate-t-learner-report = "causal_uplift_experimentation_ops.models.report:main"
generate-t-learner-robustness = "causal_uplift_experimentation_ops.evaluation.robustness_report:main"
generate-t-learner-bootstrap = "causal_uplift_experimentation_ops.evaluation.bootstrap_report:main"
generate-crossfit-comparison = "causal_uplift_experimentation_ops.evaluation.comparison_report:main"
generate-policy-simulation = "causal_uplift_experimentation_ops.policy.report:main"
generate-policy-sensitivity = "causal_uplift_experimentation_ops.policy.sensitivity_report:main"
generate-policy-uncertainty = "causal_uplift_experimentation_ops.policy.uncertainty_report:main"
generate-policy-trial = "causal_uplift_experimentation_ops.experiments.policy_trial_report:main"
generate-experiment-planning = "causal_uplift_experimentation_ops.experiments.preregistration_report:main"
generate-policy-artifact = "causal_uplift_experimentation_ops.artifacts.report:main"
score-policy-batch = "causal_uplift_experimentation_ops.artifacts.batch_score:main"
serve-policy-api = "causal_uplift_experimentation_ops.api.app:main"
generate-api-staging-report = "causal_uplift_experimentation_ops.api.report:main"
generate-api-safety-report = "causal_uplift_experimentation_ops.api.safety_report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
