[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-uplift-experimentation-ops"
version = "0.1.0"
description = "Reproducible synthetic causal ML workflow for uplift evaluation and policy operations."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Akshaj Kashyap"},
]
requires-python = ">=3.11"
keywords = [
    "causal-inference",
    "uplift-modeling",
    "ab-testing",
    "machine-learning",
    "experimentation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "joblib",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/AkshajKashyap/causal-uplift-experimentation-ops"
Repository = "https://github.com/AkshajKashyap/causal-uplift-experimentation-ops"
Issues = "https://github.com/AkshajKashyap/causal-uplift-experimentation-ops/issues"

[project.scripts]
causal-uplift-ops = "causal_uplift_experimentation_ops.cli:main"
generate-synthetic-experiment = "causal_uplift_experimentation_ops.data.generation:main"
generate-ab-report = "causal_uplift_experimentation_ops.experiments.report:main"
generate-uplift-evaluation = "causal_uplift_experimentation_ops.evaluation.report:main"
generate-t-learner-report = "causal_uplift_experimentation_ops.models.report:main"
generate-t-learner-robustness = "causal_uplift_experimentation_ops.evaluation.robustness_report:main"
generate-t-learner-bootstrap = "causal_uplift_experimentation_ops.evaluation.bootstrap_report:main"
generate-crossfit-comparison = "causal_uplift_experimentation_ops.evaluation.comparison_report:main"
generate-policy-simulation = "causal_uplift_experimentation_ops.policy.report:main"
generate-policy-sensitivity = "causal_uplift_experimentation_ops.policy.sensitivity_report:main"
generate-policy-uncertainty = "causal_uplift_experimentation_ops.policy.uncertainty_report:main"
generate-policy-trial = "causal_uplift_experimentation_ops.experiments.policy_trial_report:main"
generate-experiment-planning = "causal_uplift_experimentation_ops.experiments.preregistration_report:main"
generate-policy-artifact = "causal_uplift_experimentation_ops.artifacts.report:main"
score-policy-batch = "causal_uplift_experimentation_ops.artifacts.batch_score:main"
serve-policy-api = "causal_uplift_experimentation_ops.api.app:main"
generate-api-staging-report = "causal_uplift_experimentation_ops.api.report:main"
generate-api-safety-report = "causal_uplift_experimentation_ops.api.safety_report:main"
generate-api-audit-smoke-log = "causal_uplift_experimentation_ops.monitoring.audit:main"
generate-staging-observability = "causal_uplift_experimentation_ops.monitoring.report:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
